--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -98,8 +98,8 @@
                         </a>
                     </div>
                     <hr>
-                    <div>
-                        <a href="">
+                    <div id="export_data">
+                        <a href="{{url_for('dashboard_export_data')}}">
                             <div class="flex flex-row items-center space-x-3">
                                 <div>
                                     <i class="fa-solid fa-download"></i>
