--- a/src/templates/completed.html
+++ b/src/templates/completed.html
@@ -3,10 +3,29 @@
     Congratulations
 {% endblock %}
 {% block content %}
-    <div class="min-h-screen flex flex-col items-center justify-center">
+    <!-- <div class="min-h-screen flex flex-col items-center justify-center">
         <div>
             <img src="{{url_for('static', filename='storage/images/congrate.png')}}" alt="" class="w-full h-full">
         </div>
         
+    </div> -->
+    <div class="min-h-screen w-full p-10">
+        <div class="w-full h-full flex flex-col space-x-5 items-center justify-center">
+             <div class="w-full h-1/2">
+                <img src="{{url_for('static', filename='storage/images/congrate.png')}}" alt="" class="h-full">
+             </div>
+             <div>
+                <a href="{{url_for('task_page')}}">
+                    <div class="flex flex-row space-x-3 px-5 py-3 text-blue-500 shadow-md sm:text-base text-sm">
+                        <div>
+                            <i class="fa-solid fa-circle-left"></i>
+                        </div>
+                        <div>
+                            Back to all tasks
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 {% endblock %}
