--- a/src/templates/dashboard/overview.html
+++ b/src/templates/dashboard/overview.html
@@ -1,6 +1,39 @@
 {% extends 'dashboard/dashboard.html' %}
 {% block dashboard_content %}
-    This is overview page
+    <div class="w-full p-10">
+        <div class="flex flex-row items-center justify-center space-x-10">
+            <div class="w-1/3 p-5 bg-blue-700 rounded-md">
+                <div class="flex flex-col space-y-5 text-white w-full">
+                    <div class="uppercase font-bold">
+                        <p>Total Speaker</p>
+                    </div>
+                    <div class="self-center text-6xl">
+                        <p>{{total_speaker}}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w-1/3 p-5 bg-blue-500 rounded-md">
+                <div class="flex flex-col space-y-5 text-white w-full">
+                    <div class="uppercase font-bold">
+                        <p>Total recording</p>
+                    </div>
+                    <div class="self-center text-6xl">
+                        <p>{{total_recording}}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w-1/3 p-5 bg-blue-300 rounded-md">
+                <div class="flex flex-col space-y-5 text-white w-full">
+                    <div class="uppercase font-bold">
+                        <p>Total Audio</p>
+                    </div>
+                    <div class="self-center text-6xl">
+                        <p>{{total_audio}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
         overview = document.getElementById('overview')
         overview.classList.add('text-blue-500')
