--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -1,70 +1,65 @@
-<div class="sticky">
-  <div class="w-screen p-3 px-6 bg-blue-800 text-white shadow-xl">
-    <div class="sm:hidden flex flex-row items-center space-x-3 justify-between">
-      <div>
-        <div class="uppercase py-2 px-4 rounded-md bg-white text-gray-700">
-          <h1>
-            <a href="">Record voice</a>
-          </h1>
+<div class=" hidden sm:block">
+  <div class="sticky">
+    <div class="w-screen p-3 px-6 bg-blue-800 text-white shadow-xl">
+      <div class="sm:flex flex-row items-center justify-between hidden">
+        <div class="flex flex-row space-x-8 items-center">
+          <div class="uppercase">
+            <h1>
+              <a href="{{ url_for('home_page') }}">
+                <div class="flex flex-row space-x-3 drop-shadow-md p-3 rounded-md text-white hover:bg-white hover:text-blue-500 hover:shadow-md">
+                  <div>
+                    <i class="fa-regular fa-circle-left"></i>
+                  </div>
+                  <div>
+                    Back to home
+                  </div>
+                </div>
+              </a>
+            </h1>
+          </div>
+
         </div>
+        {% if current_user.is_authenticated %}
+          <div class="flex flex-row space-x-5 items-center">
+            <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1 hover:bg-white hover:text-gray-700">
+              <div>
+                <i class="fa-solid fa-circle-user"></i>
+              </div>
+              <div>
+                <a href="">{{current_user.username}}</a>
+              </div>
+            </div>
+            <div class="flex-row space-x-2 items-center flex">
+              <div>
+                <i class="fa-solid fa-right-from-bracket"></i>
+              </div>
+              <div>
+                <a href="{{url_for('signout_page')}}">Sign out</a>
+              </div>
+            </div>
+          </div>
+        {% else %}
+          <div class="flex flex-row space-x-5 items-center">
+            <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1">
+              <div>
+                <i class="fa-solid fa-right-to-bracket"></i>
+              </div>
+              <div>
+                <a href="{{ url_for('signin_page') }}">Sign in</a>
+              </div>
+            </div>
+            <div class="flex-row space-x-2 items-center flex">
+              <div>
+                <i class="fa-solid fa-pen-to-square"></i>
+              </div>
+              <div>
+                <a href="{{url_for('register_page')}}">Register</a>
+              </div>
+            </div>
+          </div>
+        {% endif %}
       </div>
-      <div class="text-xl">
-        <i class="fa-solid fa-grip"></i>
-      </div>
-    </div>
-    <div class="sm:flex flex-row items-center justify-between hidden">
-      <div class="flex flex-row space-x-8 items-center">
-        <div class="uppercase">
-          <h1>
-            <a href="{{ url_for('home_page') }}">Home</a>
-          </h1>
-        </div>
-        <div class="uppercase">
-          <h1>
-            <a href="{{url_for('task_page')}}">Task</a>
-          </h1>
-        </div>
-      </div>
-      {% if current_user.is_authenticated %}
-        <div class="flex flex-row space-x-5 items-center">
-          <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1 hover:bg-white hover:text-gray-700">
-            <div>
-              <i class="fa-solid fa-circle-user"></i>
-            </div>
-            <div>
-              <a href="">{{current_user.username}}</a>
-            </div>
-          </div>
-          <div class="flex-row space-x-2 items-center flex">
-            <div>
-              <i class="fa-solid fa-right-from-bracket"></i>
-            </div>
-            <div>
-              <a href="{{url_for('signout_page')}}">Sign out</a>
-            </div>
-          </div>
-        </div>
-      {% else %}
-        <div class="flex flex-row space-x-5 items-center">
-          <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1">
-            <div>
-              <i class="fa-solid fa-right-to-bracket"></i>
-            </div>
-            <div>
-              <a href="{{ url_for('signin_page') }}">Sign in</a>
-            </div>
-          </div>
-          <div class="flex-row space-x-2 items-center flex">
-            <div>
-              <i class="fa-solid fa-pen-to-square"></i>
-            </div>
-            <div>
-              <a href="{{url_for('register_page')}}">Register</a>
-            </div>
-          </div>
-        </div>
-      {% endif %}
-    </div>
+  </div>
   </div>
   
   <div class="">
@@ -75,7 +70,7 @@
         <div class="flex-row item-center justify-between alert bg-green-200 py-3 px-10 mb-3 text-center text-green-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
           <div class="flex flex-row space-x-3 items-center">
             <div>
-              <i class="fa-solid fa-circle-xmark"></i>
+              <i class="fa-solid fa-circle-check"></i>
             </div>
             <div>
               {{message}}
