--- a/src/templates/task.html
+++ b/src/templates/task.html
@@ -3,8 +3,11 @@
 Task
 {% endblock %}
 {% block content %}
-    <div class="min-h-screen">
-        <div class="p-32 w-full">
+    <div class="min-h-screen flex flex-col space-y-5 sm:p-32 p-5 text-gray-700">
+        <div class="font-bold sm:text-3xl text-base">
+            <p>Available Tasks</p>
+        </div>
+        <div class="w-full sm:text-base text-sm">
             <div class="accordion" id="accordionExample">
                 {% for task in tasks %}
                 <div class="accordion-item bg-white border border-gray-200">
@@ -17,7 +20,7 @@ Task
                       w-full
                       py-4
                       px-5
-                      text-base text-gray-800 text-left
+                      sm:text-base text-gray-800 text-left text-xs
                       bg-white
                       border-0
                       rounded-none
@@ -25,7 +28,7 @@ Task
                       focus:outline-none
                     " type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{task.id}}" aria-expanded="true"
                       aria-controls="collapseOne">
-                      <div class="flex flex-row items-center space-x-5 w-full">
+                      <div class="flex flex-row items-center sm:space-x-5 space-x-3 w-full">
                         <div>
                             #{{task.name}}
                         </div>
@@ -78,4 +81,5 @@ Task
             </div>
         </div>
     </div>
+
 {% endblock %}
